# syncx

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: app_config.rs  context.rs  errors.rs  main.rs  service.rs
client/src/cli/: mod.rs  subcommands.rs
client/src/core/: context.rs  errors.rs  mod.rs  service.rs  utils.rs
client/src/dev/: context.rs
client/src/mock/: errors.rs  service.rs  utils.rs
common/: Cargo.toml  build.rs
common/proto/: syncx.proto
common/src/: common.rs  errors.rs  lib.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: errors.rs  lib.rs  merkle_tree.rs  utils.rs
merkle-tree/tests/: common.rs  merkle_tree_test.rs
proto/: Cargo.toml
proto/proto/: syncx.proto
proto/src/: lib.rs
server/: .env.test  .gitignore  Cargo.toml  env.template
server/src/: auth.rs  config.rs  definitions.rs  errors.rs  main.rs  server.rs  store_v1.rs
server/src/core/: auth.rs  config.rs  definitions.rs  errors.rs  mod.rs  path_resolver.rs  queue.rs  server.rs  store_v1.rs  utils.rs  worker.rs
server/wip/pending_downloads/fb3c4d2c-789f-4ade-9c51-23ff6c8b86c5/: merkletree.txt
server/wip/pending_uploads/76704483-ae5a-4835-9271-9f35115fd1c5/: context.rs  utils.rs
