[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
proto = {path = "../proto"}
merkle-tree = {path = "../merkle-tree"}
tonic = "0.10.2"
thiserror = "1.0.56"
serde = { version = "1.0.195", features = ["derive"] }
directories = "5.0.1"
serde_json = "1.0.111"
clap = { version = "4.4.18", features = ["derive"] }
derive_builder = "0.12.0"
tempfile = "3.9.0"

