[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = "0.10.2"
zip = "0.6.6"
merkle-tree = {path = "../merkle-tree"}
rayon = "1.8.1"
thiserror = "1.0.56"
tempfile = "3.9.0"
env_logger = "0.11.0"
log = "0.4.20"

[build-dependencies]
tonic-build = "0.10.2"

