[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
lazy_static = "1.4.0"
rayon = "1.8.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
tempfile = "3.9.0"
thiserror = "1.0.56"
